Fix button line wraps

--- a/src/pages/Landing/LandingPage.module.css
+++ b/src/pages/Landing/LandingPage.module.css
@@ -16,6 +16,7 @@ header p {
 
 .button {
   display: inline-block;
+  white-space: nowrap;
   margin: 0.5rem;
   padding: 0.5rem 1.5rem;
   max-width: 140px;
